--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,3 +1,15 @@
+/* body {
+background-image: url(/doc/olympicsFlag.jpg);
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-size: cover;
+
+}
+img {
+    opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
+} */
+
 body {
     margin: 0;
 }
